Disabled default bevy features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.15"
+bevy = { version = "0.15", default-features = false, features = [] }
 bevy_pretty_text = { git = "https://github.com/void-scape/bevy_pretty_text.git" }
 bevy_sequence = { git = "https://github.com/CorvusPrudens/bevy_sequence.git" }
